--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   equatable: ^2.0.3
   bloc:
   flutter_bloc: ^8.0.1
+  flutter_staggered_grid_view: ^0.6.1
+  
 
 dev_dependencies:
   flutter_test:
