--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,15 @@ dependencies:
   bloc:
   flutter_bloc: ^8.0.1
   flutter_staggered_grid_view: ^0.6.1
-  
+  carousel_slider: ^4.0.0
+  material_floating_search_bar: ^0.3.6
+  cloud_firestore: ^3.1.8
+  firebase_auth: ^3.3.6
+  firebase_core: ^1.12.0
+
+  firebase_storage: ^10.2.7
+
+
 
 dev_dependencies:
   flutter_test:
